--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,4 +5,8 @@ edition = "2024"
 
 [dependencies]
 adw = { version = "0.7.2", package = "libadwaita", features = ["v1_5"] }
+async-channel = "2.3.1"
+features = "0.10.0"
+full = "0.3.0"
 gtk4 = "0.9.6"
+tokio = { version = "1.45.0", features = ["full"] }
